Fix #105555: Cycles: Baking only indirect lighting is broken

The problem here was that when direct light contibutions to baking were
disabled, the kernel just skipped all direct lighting evaluation.

However, at secondary bounces, "direct light" would actually end up
being indirect (since there's an extra bounce along the way), but
we're still skipping it.

Therefore, only apply direct lighting skipping at the first bounce.